--- a/main.css
+++ b/main.css
@@ -14,7 +14,6 @@ main .carrousel{
     width: 100%;
     height: 200px;
 }
-
 .carrousel img {
     width: 100%;
     height: 300px; 
@@ -30,7 +29,7 @@ main .banner-principal{
     position: absolute;
     align-items: center;
     color: #fff;
-    bottom:40vh;
+    bottom:54vh;
     padding: 10px;
     justify-content: center;
     background-color: rgba(231, 228, 228, 0);
@@ -56,15 +55,15 @@ main .banner-principal button:hover{
     background-color: darkred;
 }
 
-@media screen and (min-width: 764px){
+@media screen and (min-width: 764px) and (max-width: 1023px){
     main .banner-principal h1{
         font-size: 3em;
     }
     main .banner-principal {
-        bottom:40vh;
+        bottom:50vh;
     }
     main .banner-principal button{
-        width: 50%;
+        width: 70%;
     }
 }
 @media screen and (min-width: 1024px){
@@ -72,7 +71,7 @@ main .banner-principal button:hover{
         font-size: 5em;
     }
     main .banner-principal {
-        bottom:10vh;
+        bottom:50vh;
     }
     main .banner-principal button{
         width: 60%;
