--- a/viagens.css
+++ b/viagens.css
@@ -13,17 +13,16 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
 }
 body .container-mae-todos{
-    margin: 20px;
+    margin: 30px;
     transform: translateY(100%);
     transition: all 0.5s ease-in-out;
 }
 header {
     background-color: #282c31;
     color: white;
-    padding: 20px 0;
+    padding: 23px 25px;
     text-align: center;
 }
 .menu-navegacao {
@@ -59,19 +58,21 @@ main section .texto-populares{
 }
 main .destinos-card{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    margin-top: 30px;
+    grid-template-columns: repeat(1, 1fr); 
+    margin-top: 30px; 
     gap: 10px;
     border-radius: 12px;
     padding: 10px;
     background-color: #e7e7e7;
 }
 main .card{
-    display: block;
-    margin-top: 10px;
+    display: flex; 
+    flex-direction: column; 
+    margin-top: 10px; 
 }
 main .card img{
     width: 100%;
+    height: 200px;
     border-radius: 10px;
     border: 1px #fff solid;
 }
@@ -87,7 +88,7 @@ main .card span{
 main .card button{
     display: flex;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px; 
     padding: 10px;
     background-color: green;
     border: none;
@@ -100,7 +101,7 @@ main .card button:hover{
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     main .sobre h2,
     main section .texto-populares h2 {
         font-size: 2.0em; 
@@ -114,12 +115,32 @@ main .card button:hover{
         text-align: justify;
     }
     main .foto-sobre img{
-        width: 50%;
+        width: 400px;
     }
     body .container-mae-todos {
         margin: 40px; 
     }
+    main .destinos-card{
+        grid-template-columns: repeat(2, 1fr); 
+        gap: 15px; 
+    }
     main .card img{
         height: 250px;
+    }
+}
+/* Ajustes para telas maiores que 1024px (separado da media query anterior) */
+@media screen and (min-width: 1024px) {
+    main .destinos-card{
+        grid-template-columns: repeat(4, 1fr); /* Quatro colunas lado a lado */
+        gap: 20px; 
+    
+    }
+    main .foto-sobre img{
+        width: 200px;
+}
+    main .foto-sobre{
+        display: flex;
+        align-items: flex-start;
+        gap: 20px;
     }
 }
