--- a/viagens.css
+++ b/viagens.css
@@ -16,8 +16,8 @@ body {
 }
 body .container-mae-todos{
     margin: 30px;
-    transform: translateY(100%);
-    transition: all 0.5s ease-in-out;
+    transform: translateX(100%); /* Começa fora da tela, à direita */
+    transition: transform 0.5s ease-in-out; /* Anima a propriedade transform */
 }
 header {
     background-color: #282c31;
