--- a/viagens.css
+++ b/viagens.css
@@ -18,6 +18,7 @@ body .container-mae-todos{
     margin: 30px;
     transform: translateX(100%); /* Começa fora da tela, à direita */
     transition: transform 0.5s ease-in-out; /* Anima a propriedade transform */
+    overflow-x: hidden;
 }
 header {
     background-color: #282c31;
