--- a/viagens.css
+++ b/viagens.css
@@ -8,6 +8,7 @@ body {
     background-color: #f4f4f4;
     font-family: 'Arial', sans-serif;
     color: #333;
+    overflow-x: hidden;
 }
 .container-cabecalho{
     display: flex;
@@ -16,8 +17,8 @@ body {
 }
 body .container-mae-todos{
     margin: 30px;
-    transform: translateX(100%); /* Começa fora da tela, à direita */
-    transition: transform 0.5s ease-in-out; /* Anima a propriedade transform */
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in-out; 
     overflow-x: hidden;
 }
 header {
@@ -121,12 +122,10 @@ main .card button:hover{
         height: 250px;
     }
 }
-/* Ajustes para telas maiores que 1024px (separado da media query anterior) */
 @media screen and (min-width: 1024px) {
     main .destinos-card{
-        grid-template-columns: repeat(4, 1fr); /* Quatro colunas lado a lado */
+        grid-template-columns: repeat(4, 1fr);
         gap: 20px; 
-    
     }    
     main .foto-sobre{
         display: flex;
